feat(jni-agent): 添加JVMTI功能增强
- 新增JdwpClient类用于JDWP协议通信
- 添加suspend/resume线程和VM的功能
- 实现线程ID查询和方法签名捕获
- 增强JVMTI环境支持线程状态查询
- 添加本地变量访问和栈帧遍历功能
- 更新图标处理器和注解处理逻辑
- 添加性能分析相关的设置选项